--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "@mui/x-tree-view": "^8.6.0",
     "@react-spring/web": "^10.0.1",
     "dayjs": "^1.11.13",
-    "react": "latest",
-    "react-dom": "latest"
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-router-dom": "7.6.3"
   },
   "devDependencies": {
-    "@types/react": "latest",
-    "@types/react-dom": "latest",
+    "@types/react": "19.1.0",
+    "@types/react-dom": "19.1.0",
     "@vitejs/plugin-react": "latest",
     "typescript": "latest",
     "vite": "latest"
